--- a/slides.html
+++ b/slides.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Unit Testing Workshop</title>
+    <title>Your first tech talk Workshop</title>
     <meta charset="utf-8" />
     <style>
-      @import url(https://fonts.googleapis.com/css?family=Handlee:400, 600);
-      @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
-      @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap");
-      @import url("https://fonts.googleapis.com/css?family=Amatic+SC:400,700");
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Amatic+SC:400,700');
       body {
-        font-family: "Open Sans", sans-serif;
+        font-family: 'Open Sans', sans-serif;
       }
       .remark-slide-content h1 {
         font-size: 76px;
@@ -17,13 +16,13 @@
       h1,
       h2,
       h3 {
-        font-family: "Open Sans", sans-serif;
+        font-family: 'Open Sans', sans-serif;
         /*font-family: 'Amatic SC';*/
         font-weight: 600;
       }
       .remark-code,
       .remark-inline-code {
-        font-family: "Ubuntu Mono", monospace;
+        font-family: 'Ubuntu Mono', monospace;
         font-size: 25px;
       }
       img {
@@ -65,14 +64,14 @@
     <textarea id="source"> </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script>
-      const slide = window.location.search.split("=")[1] || "index.md";
+      const slide = window.location.search.split('=')[1] || 'index.md'
       fetch(slide)
         .then(r => r.text())
         .then(r => {
-          let mark = r;
-          document.getElementById("source").innerHTML = mark;
-          var slideshow = remark.create();
-        });
+          let mark = r
+          document.getElementById('source').innerHTML = mark
+          var slideshow = remark.create()
+        })
     </script>
   </body>
 </html>
