Finish up the content

--- a/index.html
+++ b/index.html
@@ -1,47 +1,38 @@
-<ol>
+<h1>Your first tech talk workshop</h1>
+<ul>
   <li>
     <a href="slides?file=index.md" target="_BLANK"><h1>Welcome</h1></a>
   </li>
   <li>
-    <a href="slides?file=why-tdd.md" target="_BLANK"><h1>Why TDD</h1></a>
-  </li>
-  <li>
-    <a href="slides?file=why-jest.md" target="_BLANK"><h1>Why Jest</h1></a>
-  </li>
-  <li>
-    <a href="slides?file=installation.md" target="_BLANK"
-      ><h1>Installation</h1></a
+    <a href="slides?file=part-1-what-to-talk-about.md" target="_BLANK"
+      ><h1>Part 1: What to talk about</h1></a
     >
   </li>
   <li>
-    <a href="slides?file=hands-on-1.md" target="_BLANK"><h1>Hands-on 1</h1></a>
-  </li>
-  <li>
-    <a href="slides?file=best-practices.md" target="_BLANK"
-      ><h1>Best practices</h1></a
+    <a href="slides?file=part-2-how-to-present.md" target="_BLANK"
+      ><h1>Part 2: How to present</h1></a
     >
-  </li>
-  <li>
-    <a href="slides?file=installation-angular.md" target="_BLANK"
-      ><h1>Installation Angular</h1></a
-    >
-  </li>
-  <li>
-    <a href="slides?file=hands-on-2.md" target="_BLANK"><h1>Hands-on 2</h1></a>
   </li>
   <li>
     <a href="slides?file=final.md" target="_BLANK"><h1>Final words</h1></a>
   </li>
-</ol>
-<small
-  ><a href="https://www.meetup.com/copenhagenjs/events/264005168/"
-    >Link to meetup</a
-  ></small
->
+</ul>
+<small><a href="https://www.meetup.com/copenhagenjs/events/264037209/">Link to meetup</a></small>
 <style>
   body {
     font-family: sans-serif;
     width: 800px;
     margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+  ul {
+    flex: 2;
+    width: 100%;
+  }
+  small {
+    flex: 1;
   }
 </style>
