Add my presentation and a few edits

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <a href="slides?file=index.md" target="_BLANK"><h1>Welcome</h1></a>
   </li>
   <li>
+    <a href="slides?file=why.md" target="_BLANK"
+      ><h1>Why?</h1></a
+    >
+  </li>
+  <li>
     <a href="slides?file=part-1-what-to-talk-about.md" target="_BLANK"
       ><h1>Part 1: What to talk about</h1></a
     >
